--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /modes/*
+!/modes/PythonMode
+
+/modes/PythonMode/*
+!/modes/PythonMode/mode
+
+/modes/PythonMode/mode/*
 !/modes/PythonMode/mode/Lib
-!/modes/PythonMode/mode/Lib/*
