--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 *.gif
 
 /modes/*
+!/modes/PythonMode
+/modes/PythonMode/*
+!/modes/PythonMode/mode
+/modes/PythonMode/mode/*
 !/modes/PythonMode/mode/Lib
